--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <title>FF7 Run</title>
 </head>
 <body>
-    <h1> ff7</h1>
+   <img src='https://i.imgur.com/8LQVirB.jpg' class='image'>
 </body>
 </html>
