--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>FF7 Run</title>
 </head>
 <body>
-   <img src='https://i.imgur.com/8LQVirB.jpg' class='image'>
+   <div id='game'>
+       <div id='cloud'></div>
+       <div id='enemies'></div>
+   </div>
+   <h1 id='score'>0</h1>
 </body>
 </html>
