--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
    <div id='game'>
        <div id='cloud'></div>
-       <div id='enemies'></div>
+       <div class='enemies'>
+           <div id='tonberry'></div>
+           <div id='cactaur'></div>
+        </div>
    </div>
    <h1 id='score'>0</h1>
 </body>
