--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     <title>FF7 Run</title>
 </head>
 <body>
-   <div id='game'>
-       <div id='cloud'></div>
-       <div class='enemies'>
-           <div id='tonberry'></div>
-           <div id='cactaur'></div>
-        </div>
+   <div class='game'>
+        <div id='cloud'></div>
+        <div id='tonberry'></div>
+        <div id='cactuar'></div>
+        <h1 id='score'>0</h1>
    </div>
-   <h1 id='score'>0</h1>
 </body>
 </html>
+
