Gain points for touching coin

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div id='cloud'></div>
         <div id='tonberry'></div>
         <div id='cactuar'></div>
+        <div id='gil'></div>
         <h1 id='score'>0</h1>
    </div>
 </body>
