Added try again page

--- a/html/gameOver.html
+++ b/html/gameOver.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class='gameOver'>
-    <a id='return' href='../html/titleScreen.html'>Click to continue</a> 
+    <a id='return' href='../html/tryAgain.html'>Click to continue</a> 
     </div>
 </body>
 </html>
