--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <div id='tonberry'></div>
         <div id='cactuar'></div>
         <div id='gil'></div>
-        <h1 id='score'>0</h1>
+        <div id='score'>0</div>
+        <div id='highScore'>High Score: </div>
    </div>
 </body>
 </html>
