try again instructions link back to try again page

--- a/html/tryAgain.html
+++ b/html/tryAgain.html
@@ -10,7 +10,8 @@
 <body>
     <div class='titleScreen'>
         <a id='newGame' href='../index.html'>Try Again?</a>
-        <a id='instructions' href='../html/instructions.html'>Instructions</a>
+        <a id='instructions' href='../html/instructions2.html'>Instructions</a>
+        <a id='highScore' href='../html/highScore.html'>High Score</a>
     </div>
 </body>
 </html>
