Reset high score if clicking new game link

--- a/html/highScore.html
+++ b/html/highScore.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='../css/highScore.css'>
-    <script defer src='../highScore.js'></script>
+    <script defer src='../js/highScore.js'></script>
     <title>Instructions</title>
 </head>
 <body>
