Have score showing and stopped highscore from showing when playing the game

--- a/html/instructions2.html
+++ b/html/instructions2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class='instructions'>
-        <p>Avoid the enemies by pressing spacebar to jump. <br> Collect gil to increase your score (The longer you are touch the gil, the more points)</p>
+        <p>Avoid the enemies by pressing spacebar to jump. <br> Touch the gil to increase your score</p>
         <a id='exit' href='../html/tryAgain.html'>Exit</a>
     </div>
 </body>
