--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <div id='tonberry'></div>
         <div id='cactuar'></div>
         <div id='gil'></div>
-        <div id='score'>0</div>
+        <div id='score'></div>
+        <p id='scoreBoard'>Score: </p>
         <div id='highScore'></div>
    </div>
 </body>
