Changed css for high score page

--- a/html/highScore.html
+++ b/html/highScore.html
@@ -10,10 +10,11 @@
 </head>
 <body>
     <div class='scoreBoard'>
-        
-        <p id='highScore'>High Score: </p>
-        <div id='currentScore'></div>
-        <a id='exit' href='../html/tryAgain.html'>Exit</a>
+        <div class='background'>
+            <p id='highScore'>High Score: </p>
+            <div id='currentScore'></div>
+            <a id='exit' href='../html/tryAgain.html'>Exit</a>
+        </div>
     </div>
-</body>
+</body> 
 </html>
