Added hard level

--- a/html/gameOver.html
+++ b/html/gameOver.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='../css/gameOver.css'>
+    <script defer src='../js/highScore.js'></script>
     <title>Game Over</title>
 </head>
 <body>
