--- a/html/highScore.html
+++ b/html/highScore.html
@@ -13,6 +13,12 @@
         <div class='background'>
             <p id='highScore'>High Score: </p>
             <div id='currentScore'></div>
+
+            <!-- ---------------------------- -->
+            <p id='highScoreHard'>High Score (Hard): </p>
+            <div id='currentScoreHard'></div>
+            <!-- ---------------------------- -->
+
             <a id='exit' href='../html/tryAgain.html'>Exit</a>
         </div>
     </div>
