--- a/html/instructions2.html
+++ b/html/instructions2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class='instructions'>
-        <p>Avoid the enemies <img src='https://i.imgur.com/vdgX8Jl.png'><img src='https://i.imgur.com/n8PcHmO.png'> by pressing spacebar to jump. <br> Touch the gil <img src='https://i.imgur.com/VjkSory.png'> to earn points</p>
+        <p>Avoid the enemies <img src='https://i.imgur.com/vdgX8Jl.png'><img src='https://i.imgur.com/n8PcHmO.png'><img src='https://i.imgur.com/qROV3nh.png'> by pressing spacebar to jump. <br> Touch the gil <img src='https://i.imgur.com/VjkSory.png'> to earn points</p>
         <a id='exit' href='../html/tryAgain.html'>Exit</a>
     </div>
 </body>
