--- a/html/titleScreen.html
+++ b/html/titleScreen.html
@@ -10,7 +10,12 @@
 </head>
 <body>
     <div class='titleScreen'>
-        <a id='newGame' href='../index.html' >New Game</a>
+        <!-- <a id='newGame' href='../index.html' >New Game</a> -->
+<!-- ---------------------------------------- -->
+        <div id='newGame'>New Game</div>
+        <a id='normal' href="../index.html">Normal Mode</a>
+        <a id='hard' href='../html/hardLevel.html'>Hard Mode</a>
+<!-- ---------------------------------------- -->
         <a id='instructions' href='../html/instructions.html'>Instructions</a>
     </div>
 </body>
