--- a/html/tryAgain.html
+++ b/html/tryAgain.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class='titleScreen'>
-        <a id='newGame' href='../index.html'>Try Again?</a>
+        <!-- <a id='newGame' href='../index.html'>Try Again?</a> -->
+<!-- --------------------------------------- -->
+        <div id='tryAgain'>Try Again?</div>
+        <a id='normal' href="../index.html">Normal Mode</a>
+        <a id='hard' href='../html/hardLevel.html'>Hard Mode</a>
+<!-- --------------------------------------- -->
         <a id='instructions' href='../html/instructions2.html'>Instructions</a>
         <a id='highScore' href='../html/highScore.html'>High Score</a>
     </div>
